--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-340.7KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 波兰-380.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-377.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: 38.107.226.238, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 波兰-407.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-324.9KB/s(Youtube:不良林), server: 183.232.48.186, port: 31602, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 波兰-550.0KB/s(Youtube:不良林), server: 217.30.10.64, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: ca1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: ca1.trojan.tel, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: c61s3.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.21MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇬🇧 英国-1.60MB/s(Youtube:不良林), server: 51.89.115.71, port: 443, type: vmess, uuid: 10d590b4-f5da-4494-b6ff-51ef38149448, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.115.71}}
+  - {name: 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.75MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 2e1a3721-c322-40ed-8d23-881c7be90839, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.01MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇬🇧 英国-2.69MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 波兰-380.5KB/s(Youtube:不良林)
-      - 波兰-377.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 波兰-407.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
-      - 波兰-550.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 波兰-380.5KB/s(Youtube:不良林)
-      - 波兰-377.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 波兰-407.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
-      - 波兰-550.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 波兰-380.5KB/s(Youtube:不良林)
-      - 波兰-377.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 波兰-407.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
-      - 波兰-550.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 波兰-380.5KB/s(Youtube:不良林)
-      - 波兰-377.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 波兰-407.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
-      - 波兰-550.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 波兰-380.5KB/s(Youtube:不良林)
-      - 波兰-377.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 波兰-407.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
-      - 波兰-550.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 波兰-380.5KB/s(Youtube:不良林)
-      - 波兰-377.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 波兰-407.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
-      - 波兰-550.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-340.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 波兰-380.5KB/s(Youtube:不良林)
-      - 波兰-377.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 波兰-407.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
-      - 波兰-550.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-906.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
