--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.07MB/s(Youtube:不良林), server: 51.89.115.71, port: 443, type: vmess, uuid: 10d590b4-f5da-4494-b6ff-51ef38149448, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120211331422, ws-headers: {Host: 51.89.115.71}}
-  - {name: 🇳🇱 荷兰-3.08MB/s(Youtube:不良林), server: c61s5.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-555.1KB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.08MB/s(Youtube:不良林), server: ca1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: ca1.trojan.tel, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.59MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-2.96MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.76MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-185.9KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: c61s801.jamjams.net, port: 29907, type: vmess, uuid: bd316a79-4d18-4c8c-82cf-ffe99e7c634d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-347.6KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.48MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.98MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.06MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
+  - {name: 🇨🇳 中国-410.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-555.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-185.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-555.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-185.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-555.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-185.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-555.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-185.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-555.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-185.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-555.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-185.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-555.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-185.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-347.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.19MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
